# messenger-explorer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/models/: README.md  dense.safetensors
src-tauri/src/: clip.rs  lib.rs  pdf_export.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs  writer.rs
src-tauri/src/parser/: facebook.rs  messenger.rs  mod.rs  mojibake.rs
src/components/: AlbumContextMenu.tsx  AlbumPickerButton.tsx  ArchiveSidebar.tsx  ColorPicker.tsx  ContextModal.tsx  FilterBar.tsx  Gallery.tsx  ImageCard.tsx  ImageGrid.tsx  ImageListRow.tsx  ImportDialog.tsx  LanguageSelector.tsx  SelectiveIndexingDialog.tsx  TopBar.tsx
src/components/ui/: select.tsx
src/data/: images.ts  messages.ts  types.ts
src/hooks/: useTauriDrop.ts
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  es.json  it.json  ja.json  pl.json  pt.json  zh.json
src/lib/: api.ts  locale.ts
src/pages/: Index.tsx  Settings.tsx
